--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -7,10 +7,14 @@
 body{
     font-family: Lato, sans-serif;
     color: #3a3a3a;
-    background-color: red;
+    background-color: white;
 }
 
 /* headings and logo */
+
+header {background-color: red;
+border-radius: 6px;
+margin: 4px;}
 
 h1, h2{
     font-family: Oswald, sans-serif;
@@ -59,13 +63,13 @@ header { padding-bottom: 70px;}
 
 /* navigation links images*/
 
-section {height: 1200px;
-    clear: both;
+#other-pages {height: 600px;
+  clear: both;
 }
 
 #left-about{
     padding-top: 30px;
-    width: 33%;
+    width: 50%;
     float: left;
     background-image: url("/assets/images/politcal.jpg");
     background-repeat: no-repeat;
@@ -77,19 +81,8 @@ section {height: 1200px;
 
 #right-about {
     padding-top: 30px;
-    width: 33%;
+    width: 50%;
     float: right;
-    background-image: url("/assets/images/personal\ life.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    overflow: hidden;
-    height: 600px;
-}
-
-#center-about {
-    width: 33%;
-    margin: 0 auto;
     background-image: url("/assets/images/legendary\ battles.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -97,7 +90,6 @@ section {height: 1200px;
     overflow: hidden;
     height: 600px;
 }
-
 
 .left-about-heading  h2{color:white
 ; text-align: center; line-height: 30px;}
@@ -241,5 +233,8 @@ section {height: 1200px;
         }
       }
 
-      
+      /* footer */
+      footer {background-color: red;
+        border-radius: 6px;
+        margin-top: 50px; width: 100%; height: 10%;}
       
