--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -238,3 +238,8 @@ header { padding-bottom: 70px;}
         border-radius: 6px;
         margin-top: 50px; width: 100%; height: 10%;}
       
+      /* section about */
+      
+      #about-Ceasar h2 ,p{text-align: center;
+      margin: 8px;
+      clear: both;}
