--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -65,6 +65,7 @@ header { padding-bottom: 70px;}
 
 #other-pages {height: 600px;
   clear: both;
+  margin: 8px;
 }
 
 #left-about{
@@ -95,13 +96,7 @@ header { padding-bottom: 70px;}
 ; text-align: center; line-height: 30px;}
 .right-about-heading h2{color:white
     ; text-align: center; line-height: 30px;}
-.center-about-heading h2{color:white
-        ; text-align: center; line-height: 30px;}
 
-    section background-img:hover{
-        border-color: #66afe9;
-        box-shadow: 0 0 100px rgba(0,0,255, 1);
-      }
 
     
       
@@ -236,10 +231,34 @@ header { padding-bottom: 70px;}
       /* footer */
       footer {background-color: red;
         border-radius: 6px;
-        margin-top: 50px; width: 100%; height: 10%;}
+        margin: 4px;
+        height: 150px;}
+
+        /* Footer */
+
+      .social-networks{
+       text-align: center;
+       
+
+        }
+
+      .social-networks li{
+        display: inline;
+        }   
+
+      .social-networks i{
+        font-size: 160%;
+      
+        padding: 5%;
+        color: #3a3a3a;
+        }     
       
       /* section about */
       
-      #about-Ceasar h2 ,p{text-align: center;
+      #about-Ceasar p{
+      text-align: center;
       margin: 8px;
-      clear: both;}
+      }
+
+      #about-Ceasar h3 { text-align: center;
+        margin: 8px;}
