--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -8,6 +8,7 @@ body{
     font-family: Lato, sans-serif;
     color: #3a3a3a;
     background-color: white;
+    min-height: 100vh;
 }
 
 /* headings and logo */
