--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -9,6 +9,9 @@ body{
     color: #3a3a3a;
     background-color: white;
     min-height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 /* headings and logo */
@@ -59,7 +62,7 @@ h1, h2{
 .active{
     border-bottom: 1px solid #3a3a3a;
 }
-header { padding-bottom: 70px;}
+header { padding-bottom: auto;}
 
 
 /* navigation links images*/
@@ -100,16 +103,20 @@ header { padding-bottom: 70px;}
 
 
     
-      
-
-
-      /* footer */
-      footer {background-color: red;
-        border-radius: 6px;
-        margin: 4px;
-        height: 150px;}
+    
 
         /* Footer */
+        footer {
+            background-color: red;
+            border-radius: 6px;
+            margin-top: auto;
+        width: 100%;}
+        
+    
+        
+      .sources {text-align: center; font-size: small; margin-top: 20px;}
+
+      .sources h2 {margin-bottom: 10px;}
 
       .social-networks{
        text-align: center;
@@ -120,7 +127,7 @@ header { padding-bottom: 70px;}
       .social-networks li{
         display: inline;
         position: relative;
-        bottom: 75px;}   
+        }   
 
       .social-networks i{
         font-size: 160%;
@@ -145,4 +152,20 @@ header { padding-bottom: 70px;}
            position: relative;
            left: 25%;}
            
-          
+           #circle-container {
+            width: 300px;
+            height: 300px;
+            padding: 30px;
+            border-style: solid;
+            border-color: #cccccc;
+            border-width: 1px;
+            border-radius: 50%;
+            margin: 0 auto;
+        }
+        
+        #circle-cover-bg {
+            background: url(/assets/images/Julius\ cesar.jpg) no-repeat center center;
+            height: 100%;
+            border-radius: 50%;
+        }
+        
