--- a/assets/css/stylesheetpolitcal.css
+++ b/assets/css/stylesheetpolitcal.css
@@ -51,7 +51,7 @@ overflow: hidden;}
         width: 6px;
         background-color: red;
         top: 0;
-        bottom: 15%;
+        bottom: 0;
         left: 50%;
         margin-left: -3px;
       }
@@ -79,7 +79,7 @@ overflow: hidden;}
       
       
       .left {
-        left: -6.7%;
+        left: 0%;
       }
       
       
@@ -126,13 +126,29 @@ overflow: hidden;}
         background-color: gray;
         position: relative;
         border-radius: 6px;
+
       }
-      
+
+      .container:end {
+        content: '';
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        right: -17px;
+        background-color: gray;
+        border: 4px solid red;
+        top: 15px;
+        border-radius: 50%;
+        z-index: 1;
+      }
+
+    
       /* Media queries - Responsive timeline on screens less than 600px wide */
       @media screen and (max-width: 600px) {
       /* Place the timelime to the left */
         .timeline::after {
-          left: 31px;
+          left: 82px;
+          bottom: 15%;
         }
       
       /* Full-width containers */
@@ -147,7 +163,7 @@ overflow: hidden;}
           left: 60px;
           border: medium solid white;
           border-width: 10px 10px 10px 0;
-          border-color: transparent white transparent transparent;
+          border-color: transparent gray transparent transparent;
         }
       
       /* Make sure all circles are at the same spot */
@@ -160,3 +176,5 @@ overflow: hidden;}
           left: 0%;
         }
       }
+   
+    
