--- a/assets/css/stylesheetpolitcal.css
+++ b/assets/css/stylesheetpolitcal.css
@@ -16,7 +16,8 @@ overflow: hidden;}
 
 
 #cover-text, #cover-text h2 {
-    color: black;
+    color: rgba(240, 248, 255,1);
+    
 }
 
 #cover-text {
@@ -25,14 +26,13 @@ overflow: hidden;}
     text-transform: uppercase;
     letter-spacing: 4px;
     text-align: center;
-
-    bottom: 200px;
     
+    bottom: 200px;
     position: relative;
-
+    justify-content: center;
 }
 
-
+#cover-text span {background-color: rgb(0, 0, 0,0.6); border-radius: 20%;}
 /*timeline poltical */
       
       
@@ -49,7 +49,7 @@ overflow: hidden;}
         content: '';
         position: absolute;
         width: 6px;
-        background-color: red;
+        background-color: rgb(168, 9, 37);
         top: 0;
         bottom: 0;
         left: 50%;
@@ -70,8 +70,8 @@ overflow: hidden;}
         width: 25px;
         height: 25px;
         right: -17px;
-        background-color: gray;
-        border: 4px solid red;
+        background-color: #A57C00;
+        border: 4px solid rgb(168, 9, 37);
         top: 15px;
         border-radius: 50%;
         z-index: 1;
