--- a/assets/css/stylesheetbattle.css
+++ b/assets/css/stylesheetbattle.css
@@ -104,4 +104,19 @@
        
           .battle-about p {padding: 8px;}
 
-         
+          @media screen and (max-width: 800px){
+
+            .container {
+            
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center
+                
+              }
+
+              .battle-about {
+                width: 80%;
+                padding-left: 20px ;
+              }
+    }
