--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -73,7 +73,7 @@ h2 {
 
 
 
-/* navigation links images*/
+/* hero images*/
 
 #other-pages {
     height: auto;
@@ -114,13 +114,15 @@ h2 {
     line-height: 30px;
 }
 
+.left-about-heading  span {background-color: rgb(0, 0, 0,0.6); border-radius: 20%;}
+
 .right-about-heading h2 {
     color: aliceblue;
     text-align: center;
     line-height: 30px;
 }
 
-
+.right-about-heading  span {background-color: rgb(0, 0, 0,0.6); border-radius: 20%;}
 
 
 
