--- a/assets/css/stylesheetbattle.css
+++ b/assets/css/stylesheetbattle.css
@@ -1,4 +1,6 @@
-    #hero-outer{
+   
+   /* hero image */
+   #hero-outer{
         height:auto;
         width: 100%;
         overflow: hidden;
@@ -30,12 +32,12 @@
             position: relative;
         
         }
-
+        #cover-text span {background-color: rgb(0, 0, 0,0.6); border-radius: 20%;}
    
 
 
         
-        
+      /* Summary about ceasar as a general*/  
         #battle-section {
             margin-top: 30px;
             clear: both;
@@ -56,7 +58,7 @@
 
         #battle-section h2 {text-align: center;}
 
-
+        /* Ceasar battles */  
         details {
             border: 1px solid #aaa;
             border-radius: 4px;
@@ -91,6 +93,7 @@
           img {
             width: 100%;
             min-height: 100px;
+            
           }
           
           .image {
@@ -103,6 +106,8 @@
           }
        
           .battle-about p {padding: 8px;}
+
+          /* responsivness */  
 
           @media screen and (max-width: 800px){
 
