bug fix hero image file path

--- a/assets/css/stylesheetpolitcal.css
+++ b/assets/css/stylesheetpolitcal.css
@@ -10,7 +10,7 @@
 #hero-image{
 height: 400px;
 width: 100%;
-background-image: url("/assets/images/politcal.jpg");
+background-image: url("../images/politcal.jpg");
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
