--- a/assets/css/stylesheetbattle.css
+++ b/assets/css/stylesheetbattle.css
@@ -10,7 +10,7 @@
     #hero-image{
     height: 400px;
     width: 100%;
-    background-image: url("/assets/images/legendary\ battles.jpg");
+    background-image: url("../images/legendary\ battles.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
