--- a/assets/css/stylesheetpolitcal.css
+++ b/assets/css/stylesheetpolitcal.css
@@ -170,7 +170,7 @@ overflow: hidden;}
           left: 60px;
           border: medium solid white;
           border-width: 10px 10px 10px 0;
-          border-color: transparent gray transparent transparent;
+          border-color: transparent #333333 transparent transparent;
         }
       
       /* Make sure all circles are at the same spot */
