changes picture + aria label bug fix

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -208,7 +208,7 @@ footer li{color: aliceblue;
 
 /* 404ERROR */
 .errorPage {
-    background: url(../images/404error.webp);
+    background: url(../images/404error.jpg);
     background-size: cover;
     background-position: bottom;
     width: 100%;
