--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -30,7 +30,7 @@ h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
-    color: #463F43;
+    
 }
 
 #logo {
@@ -165,6 +165,7 @@ footer li{color: aliceblue;
     font-size: 160%;
 
     padding: 5%;
+    padding-top: 2.5%;
     color: aliceblue;
 }
 
@@ -245,7 +246,7 @@ footer li{color: aliceblue;
 }
 
 .errorPage__text h3 {
-    font-size: 20vw;
+    font-size: 10vw;
     line-height: 1;
     margin: 0;
     letter-spacing: 0.2em;
@@ -273,13 +274,19 @@ footer li{color: aliceblue;
         
     }
 }
+
+@media screen and (max-width: 700px){
+    #about-ceasar {
+    width: 80%;
+    left: 10%;
+   }     }
 @media screen and (max-width: 650px){
 
     #menu{
         display: flex;
         flex-direction: column-reverse;
     }
-        
+   
         
     }
 
