--- a/assets/css/stylesheetpolitcal.css
+++ b/assets/css/stylesheetpolitcal.css
@@ -36,7 +36,7 @@ overflow: hidden;}
 
 #cover-text span {background-color: rgb(0, 0, 0,0.6); border-radius: 20%;}
 /*timeline poltical */
-      
+/*inspired by W3C schools*/     
       
       /*timeline */
       .timeline {
